test/files/invalid/invalid_enum_variant_size.stderr
error: Integer is out of range for type u8 (range is [0; 255])
  ┌─ test/files/invalid/invalid_enum_variant_size.fbs:2:7
  │
2 │   X = -1
  │       ^^

error: Integer is out of range for type u8 (range is [0; 255])
  ┌─ test/files/invalid/invalid_enum_variant_size.fbs:6:7
  │
6 │   X = 256
  │       ^^^

error: Integer is out of range for type i8 (range is [-128; 127])
   ┌─ test/files/invalid/invalid_enum_variant_size.fbs:10:7
   │
10 │   X = 128
   │       ^^^

Error: Bailing because of errors
